# CSE-350-Group-Project

./: .gitignore  ARAppGUI.cpp  CMakeLists.txt  README.md  build.bat  test  var.bat
GroupProject/: GroupProject.csproj  GroupProject.sln
GroupProject/Controllers/: MeetOurTeamController.cs
GroupProject/Properties/: launchSettings.json
GroupProject/Views/Home/: Index.cshtml  Privacy.cshtml
GroupProject/Views/MeetOurTeam/: CG.cshtml  CW.cshtml  Index.cshtml  JR.cshtml  ZB.cshtml  blahblah.cshtml
GroupProject/Views/Shared/: _Layout.cshtml
GroupProject/wwwroot/css/: site.css  zachsite.css
GroupProject/wwwroot/js/: JRScript.js  script.js
